--- a/Self_learning/03-3_feature_engineering_regularization.ipynb
+++ b/Self_learning/03-3_feature_engineering_regularization.ipynb
@@ -414,9 +414,7 @@
    "cell_type": "markdown",
    "id": "85c01ce6-96b0-4e8e-a78b-29178e261348",
    "metadata": {},
-   "source": [
-    "## Ridge Regression (L2)"
-   ]
+   "source": "## Ridge Regression (L2) - Generally preferred"
   },
   {
    "cell_type": "code",
@@ -467,6 +465,8 @@
     "train_score = []\n",
     "test_score = []\n",
     "alpha_list = [0.001, 0.01, 0.1, 1, 10, 100]\n",
+    "# high alpha -> strong regularization, leads to underfitting\n",
+    "# low alpha -> less regularization, leads to overfitting (makes it similar to linear regression)\n",
     "\n",
     "for alpha in alpha_list:\n",
     "    ridge = Ridge(alpha=alpha)\n",
@@ -474,6 +474,7 @@
     "    train_score.append(ridge.score(train_scaled, train_target))\n",
     "    test_score.append(ridge.score(test_scaled, test_target))\n",
     "\n",
+    "#finding the best alpha -> draw a plot of R^2 and alpha of train and test\n",
     "plt.plot(alpha_list, train_score)\n",
     "plt.plot(alpha_list, test_score)\n",
     "plt.xscale('log')\n",
